# TFM

./: .gitmodules  CMakeLists.txt
cmake/: FindMaxwell.cmake
lens_raytracer/: CMakeLists.txt
lens_raytracer/src/: App.cpp  App.h  Camera.h  LensInterface.h  Ray.h  main.cc  utils.h  vec3.h
lens_raytracer/test/src/: LensViewerTest.cpp
mxi_viewer/: CMakeLists.txt
mxi_viewer/src/: App.cpp  App.h  MxiReader.cpp  MxiReader.h  main.cpp
mxi_viewer/test/src/: MxiReader.cpp  MxiReaderTest.cpp
parallel_lens_raytracer/: CMakeLists.txt
parallel_lens_raytracer/lenses/: Lensbaby.json  canon-zoom-long.json  canon-zoom-mid.json  canon-zoom-short.json  file_conversor.py  heliar-tronnier.json  itoh-zoom-long.json  itoh-zoom-mid.json  itoh-zoom-short.json  kreitzer-tele.json  lens.json  nikon-zoom-long.json  nikon-zoom-mid.json  nikon-zoom-short.json
parallel_lens_raytracer/src/: App.cc  App.h  Camera.h  ColorSpace.h  Intersection.h  LensInterface.h  Light.h  Parameters.h  Phases.h  Ray.h  RayTrace.cu  main.cc  utils.h  vec3.h
parallel_lens_raytracer/test/src/: MyTest.cpp
